# MusicLibrarer-

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
cmake/: catch2_setup.cmake  path.cmake  qt_setup.cmake
docs/: BUILD.md  INSTALL.md
include/: DepedencyManager.hpp  MainWindow.hpp
include/models/: DataModel.hpp
include/widgets/: MainWindow.hpp  MusicCollectionInfo.hpp  MusicCollectionWidget.hpp  MusicCollectionWizard.hpp
src/: DepedencyManager.cpp  MainWindow.cpp  main.cpp
src/frontend/: MainWindow.ui  MusicCollectionInfo.ui  MusicCollectionWidget.ui  MusicCollectionWizard.ui
src/models/: DataModel.cpp
src/widgets/: MainWindow.cpp  MusicCollectionInfo.cpp  MusicCollectionWidget.cpp  MusicCollectionWizard.cpp
test/: CMakeLists.txt  main.cc  test_DataModel.cc
